examples/logicprogramming/simuworld/src/siwo/parser/SiWoParser.java
/* Generated By:JavaCC: Do not edit this line. SiWoParser.java */
package siwo.parser;

import java.util.*;
import net.sf.tweety.logicprogramming.asplibrary.syntax.*;
import siwo.syntax.*;

public class SiWoParser implements SiWoParserConstants {
  public static void main(String args []) throws ParseException
  {
    SiWoParser parser = new SiWoParser(System.in);
    WorldState sw = new WorldState();
    while (true)
    {
      System.out.println("Reading from standard input...");
      System.out.print("Enter an expression like \u005c"1+(2+3)*4;\u005c" :");
      try
      {
        switch (parser.siwo_actionrule(sw))
        {
          case 0 :
          System.out.println("OK.");
          break;
          case 1 :
          System.out.println("Goodbye.");
          break;
          default :
          break;
        }
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        break;
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }

  final public int one_line() throws ParseException {
    rule();
    {if (true) return 0;}
    throw new Error("Missing return statement in function");
  }

  final public Atom atom() throws ParseException {
        Atom ret = null;
        Token pred = null;
        List<Term > terms = null;
        SymbolicSet symset = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYMBOL:
      // atom with predicate  	
              pred = jj_consume_token(SYMBOL);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRA:
      case CURLBRA:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRA:
          jj_consume_token(LBRA);
          terms = termlist();
          jj_consume_token(RBRA);
          break;
        case CURLBRA:
          jj_consume_token(CURLBRA);
          symset = symbolicSet();
          jj_consume_token(CURRBRA);
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      break;
    case VAR:
      pred = jj_consume_token(VAR);
      break;
    case NUMBER:
      pred = jj_consume_token(NUMBER);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          if (symset == null)
                {if (true) return Atom.instantiate(pred.image, terms);}
          else
                {if (true) return new Aggregate(pred.image,symset);}
    throw new Error("Missing return statement in function");
  }

  final public SymbolicSet symbolicSet() throws ParseException {
        Set<String >  vars = new HashSet<String >();
        List<Literal > lits = null;
        Token v0 = null;
    v0 = jj_consume_token(VAR);
                     vars.add(v0.image);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      jj_consume_token(24);
      v0 = jj_consume_token(VAR);
                           vars.add(v0.image);
    }
    jj_consume_token(COLON);
    lits = literalList();
        {if (true) return new SymbolicSet(vars,lits);}
    throw new Error("Missing return statement in function");
  }

  final public List<Term> termlist() throws ParseException {
        List<Term> ret = new LinkedList<Term>();
        Token s;
        Term t;
    t = term();
                ret.add(t);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(24);
      t = term();
                        ret.add(t);
    }
          {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Term term() throws ParseException {
  Token s;
  Term t1 = null,t2 = null;
  List<Term> tl1 = null, tl2 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
    case BLANK:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        s = jj_consume_token(VAR);
        break;
      case BLANK:
        s = jj_consume_token(BLANK);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                {if (true) return new StdTerm(s.image);}
      break;
    case SYMBOL:
      s = jj_consume_token(SYMBOL);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRA:
        jj_consume_token(LBRA);
        tl1 = termlist();
        jj_consume_token(RBRA);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
                if (tl1 == null)
                        {if (true) return new StdTerm(s.image);}
                else
                        {if (true) return Atom.instantiate(s.image,tl1);}
      break;
    case NUMBER:
      s = jj_consume_token(NUMBER);
                {if (true) return new StdTerm(s.image);}
      break;
    case SQLBRA:
      jj_consume_token(SQLBRA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SQLBRA:
      case CURLBRA:
      case NUMBER:
      case SYMBOL:
      case VAR:
      case BLANK:
        tl1 = termlist();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PIPE:
          jj_consume_token(PIPE);
          tl2 = termlist();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(SQRBRA);
                {if (true) return new ListTerm( tl1, tl2 );}
      break;
    case CURLBRA:
      jj_consume_token(CURLBRA);
      tl1 = termlist();
      jj_consume_token(CURRBRA);
                {if (true) return new SetTerm(tl1);}

      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Rule rule() throws ParseException {
  Rule r;
  List<Literal> head = new LinkedList<Literal >(), body = new LinkedList<Literal >();
    head = literalListHead();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LOGIMPL:
      jj_consume_token(LOGIMPL);
      body = literalListBody();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(DOT);
                {if (true) return new Rule(head,body);}
    throw new Error("Missing return statement in function");
  }

  final public List<Rule> program() throws ParseException {
        List<Rule > elp = new LinkedList<Rule >();
        Rule r = null;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
      case LOGIMPL:
      case NUMBER:
      case NOT:
      case SYMBOL:
      case VAR:
      case 33:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      r = rule();
                        if (r != null) elp.add(r);
    }
                {if (true) return elp;}
    throw new Error("Missing return statement in function");
  }

  final public List<Literal> literalList() throws ParseException {
        List<Literal>   lits = null;
        Literal l = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
    case NOT:
    case SYMBOL:
    case VAR:
    case 33:
      l = literal();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        jj_consume_token(24);
        lits = literalList();
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
                LinkedList<Literal > ret = new LinkedList<Literal >();
                if (l != null)
                        ret.add(l);
                if (lits != null)
                        ret.addAll(lits);
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public List<Literal > literalListBody() throws ParseException {
        List<Literal >  lits = new LinkedList<Literal>();
        Literal l = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
    case NOT:
    case SYMBOL:
    case VAR:
    case 33:
      l = LiteralExpr();
                                    lits.add(l);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 24:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_4;
        }
        jj_consume_token(24);
        l = LiteralExpr();
                                            lits.add(l);
      }
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
                {if (true) return lits;}
    throw new Error("Missing return statement in function");
  }

  final public List<Literal> literalListHead() throws ParseException {
        List<Literal>   lits = null;
        Literal l = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
    case NOT:
    case SYMBOL:
    case VAR:
    case 33:
      l = literal();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PIPE:
        jj_consume_token(PIPE);
        lits = literalListHead();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
                LinkedList<Literal > ret = new LinkedList<Literal >();
                if (l != null)
                        ret.add(l);
                if (lits != null)
                        ret.addAll(lits);
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Literal LiteralExpr() throws ParseException {
        Literal l0 = null, l1 = null, l2 = null;
        String op01 = null, op12 = null;
        Term t0 = null, t1 = null;
    l0 = literal();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
    case 26:
    case 27:
    case 28:
    case 29:
    case 30:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
        jj_consume_token(25);
                              op01 = "=";
        break;
      case 26:
        jj_consume_token(26);
                                op01 = "!=";
        break;
      case 27:
        jj_consume_token(27);
                                op01 = "<=";
        break;
      case 28:
        jj_consume_token(28);
                               op01 = "<";
        break;
      case 29:
        jj_consume_token(29);
                                op01 = ">=";
        break;
      case 30:
        jj_consume_token(30);
                               op01 = ">";
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      l1 = literal();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
      case 26:
      case 27:
      case 28:
      case 31:
      case 32:
      case 33:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 25:
          jj_consume_token(25);
                                      op12 = "=";
          break;
        case 26:
          jj_consume_token(26);
                                        op12 = "!=";
          break;
        case 27:
          jj_consume_token(27);
                                        op12 = "<=";
          break;
        case 28:
          jj_consume_token(28);
                                       op12 = "<";
          break;
        case 31:
          jj_consume_token(31);
                                       op12 = "+";
          break;
        case 32:
          jj_consume_token(32);
                                       op12 = "*";
          break;
        case 33:
          jj_consume_token(33);
                                       op12 = "-";
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        l2 = literal();
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
                boolean dbgOut = false;
                // check what to do
                if ((l0 != null) && (l1 == null) && (l2 == null))
                {
                        if (dbgOut) System.out.println("unary");
                        {if (true) return l0;}
                }
                else if ((l0 != null) && (l1 != null) && (l2 == null))
                {
                        if (dbgOut) System.out.println("binary");

                        // check if one of the predicates is an aggregate
                        if (l0.isAggregate())
                        {
                          // l1 is right guard (maybe an assignment guard?)
                          Aggregate ag = (Aggregate) l0.getAtom();
                          ag.setRightGuard(l1.getAtom(), op01);

                          // was l0 default negated?
                          if (l0.isDefaultNegated())
                                {if (true) return new Not(ag);}
                          else
                            {if (true) return ag;}
                        }
                        else if (l1.isAggregate())
                        {
                          // l0 is left guard
                          Aggregate ag = (Aggregate) l1.getAtom();
                          ag.setLeftGuard(l0.getAtom(), op01);
                          {if (true) return ag;}
                        }
                        else
                        {
                                // no aggregates, could be something else
                                {if (true) return new Relation(op01,l0.getAtom(),l1.getAtom());}
                        }
                }
                else if ((l0 != null) && (l1 != null) && (l2 != null))
                {
                        // three operators: if l1 is an aggregate, we have an
                        // aggregate function with lower and upper bounds.
                        // otherwise, we have an arithmetic operation with
                        // an assignment (op12 is the arithmetic operator,
                        // op01 must be "=" and is the assignment
                        if (l1.isAggregate())
                        {
                                Aggregate ag = (Aggregate) l1;
                                ag.setLeftGuard(l0.getAtom(),op01);
                                ag.setRightGuard(l2.getAtom(),op12);
                                {if (true) return l1;}

                        }
                        else {if (true) return new Arithmetic(op12,l1.getAtom(),l2.getAtom(),l0.getAtom());}
                }
    throw new Error("Missing return statement in function");
  }

  final public Literal literal() throws ParseException {
        boolean dneg = false;
        boolean tneg = false;
        Atom a0 = null;
        Literal l = null;
        Literal r = null;
        String set_leftop = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
                        dneg = true;
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 33:
      jj_consume_token(33);
                        tneg = true;
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    a0 = atom();
                if (dneg && tneg)
                        {if (true) return new Not( new Neg(a0) );}
                else if (dneg && !tneg)
                        {if (true) return new Not( a0 );}
                else if (!dneg && tneg)
                        {if (true) return new Neg( a0 );}
                else
                        {if (true) return a0;}
    throw new Error("Missing return statement in function");
  }

  final public List<Literal > dlv_answerset() throws ParseException {
        List<Literal > ret = null;
    jj_consume_token(CURLBRA);
    ret = literalList();
    jj_consume_token(CURRBRA);
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public List<Literal > clasp_answerset() throws ParseException {
        List<Literal >  ret = new LinkedList<Literal >();
        Literal l = null;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMBER:
      case NOT:
      case SYMBOL:
      case VAR:
      case 33:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_5;
      }
      l = literal();
                        ret.add(l);
    }
                {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

// siwo action rule 
  final public int siwo_actionrule(WorldState sw) throws ParseException {
        Token t0 = null;
        Atom a0=null;
        List<Literal > lC = null, lA = null, lD = null;
    jj_consume_token(34);
    a0 = atom();
    jj_consume_token(CURLBRA);
    if (getToken(1).kind == VAR && getToken(1).image.equals("C")) {
      jj_consume_token(VAR);
      jj_consume_token(COLON);
      lC = literalListBody();
      jj_consume_token(DOT);
    } else {
      ;
    }
    if (getToken(1).kind == VAR && getToken(1).image.equals("A")) {
      jj_consume_token(VAR);
      jj_consume_token(COLON);
      lA = literalListBody();
      jj_consume_token(DOT);
    } else {
      ;
    }
    if (getToken(1).kind == VAR && getToken(1).image.equals("D")) {
      jj_consume_token(VAR);
      jj_consume_token(COLON);
      lD = literalListBody();
      jj_consume_token(DOT);
    } else {
      ;
    }
    jj_consume_token(CURRBRA);
                ActionRule ar = new ActionRule(a0,null,null,null);
                if (lC != null) ar.C.addAll(lC);
                if (lA != null) for (Literal l:lA) ar.A.add(l.getAtom());
                if (lD != null) for (Literal l:lD) ar.D.add(l.getAtom());
                sw.A.add(ar);
                {if (true) return 1;}
    throw new Error("Missing return statement in function");
  }

// siwo constraint rule
  final public int siwo_constraintrule(WorldState sw) throws ParseException {
        List<Literal > l = null;
    jj_consume_token(LOGIMPL);
    l = literalListBody();
    jj_consume_token(DOT);
                // create a new constraint
                if (l != null)
                {
                        ConstraintRule cr = new ConstraintRule(null);
                        for (Literal lit : l)
                        {
                          cr.C.add(lit.getAtom());
                        }
                        sw.C.add( cr );
                }

                {if (true) return 1;}
    throw new Error("Missing return statement in function");
  }

// siwo effect handler
  final public int siwo_effectrule(WorldState sw) throws ParseException {
        List<Literal > l = null;
        Atom ef_name = null;
        List<Literal > lC = null, lA = null, lD = null, lB = null;
    jj_consume_token(32);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
    case SYMBOL:
    case VAR:
      ef_name = atom();
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
    jj_consume_token(CURLBRA);
    if (getToken(1).kind == VAR && getToken(1).image.equals("C")) {
      jj_consume_token(VAR);
      jj_consume_token(COLON);
      lC = literalListBody();
      jj_consume_token(DOT);
    } else {
      ;
    }
    if (getToken(1).kind == VAR && getToken(1).image.equals("A")) {
      jj_consume_token(VAR);
      jj_consume_token(COLON);
      lA = literalListBody();
      jj_consume_token(DOT);
    } else {
      ;
    }
    if (getToken(1).kind == VAR && getToken(1).image.equals("D")) {
      jj_consume_token(VAR);
      jj_consume_token(COLON);
      lD = literalListBody();
      jj_consume_token(DOT);
    } else {
      ;
    }
    if (getToken(1).kind == VAR && getToken(1).image.equals("B")) {
      jj_consume_token(VAR);
      jj_consume_token(COLON);
      lB = literalListBody();
      jj_consume_token(DOT);
    } else {
      ;
    }
    jj_consume_token(CURRBRA);
                EffectRule er = new EffectRule();
                if (lC != null)
                        er.C = lC;
                if (lA != null) for (Literal lit : lA) er.A.add(lit.getAtom());
                if (lD != null) for (Literal lit : lD) er.D.add(lit.getAtom());
                if (lB != null) for (Literal lit : lB) er.B.add(lit.getAtom());
                if ((lC != null) && ((lA != null) || (lD != null) || (lB != null)))
                        sw.E.add(er);


          {if (true) return 1;}
    throw new Error("Missing return statement in function");
  }

// siwo pre code block
  final public int siwo_pre(WorldState sw) throws ParseException {
        List<Rule > p = null;
    jj_consume_token(35);
    jj_consume_token(CURLBRA);
    p = program();
    jj_consume_token(CURRBRA);
          // split program into facts an elp rules
          for (Rule r : p) {
            if (r.isFact())
                sw.F.add(r.getHead().get(0).getAtom());
            else
                sw.Rpre.add(r);
          }
          {if (true) return 1;}
    throw new Error("Missing return statement in function");
  }

// siwo post code block
